# local-projects

./: .ansible-lint  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ansible.cfg  deploy.yml  local-projects-architecture.excalidraw  pyproject.toml  requirements.txt  uninstall.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: OPEN_WEBUI_CONFIGURATION.md  QUICK_START_OLLAMA.md
docs/examples/: group_vars_all_main.yml.example
github/: main.tf  providers.tf  variables.tf
group_vars/all/: main.yml  postgres.yml
group_vars/all/vault/: main.yml  planka.yml  postgres.yml  proxmox.yml
roles/common/tasks/: docker_app.yml
roles/common/templates/: docker-compose.yml.j2
roles/excalidraw/tasks/: main.yml  uninstall.yml
roles/excalidraw/templates/: docker-compose.yml.j2
roles/excalidraw/vars/: main.yml
roles/homer/tasks/: main.yml  uninstall.yml
roles/homer/templates/: config.yml.j2  docker-compose.yml.j2
roles/homer/vars/: main.yml
roles/ollama/defaults/: main.yml
roles/ollama/handlers/: main.yml
roles/ollama/tasks/: main.yml  uninstall.yml
roles/ollama/templates/: docker-compose.yml.j2  ollama-env.sh.j2  ollama-wrapper.sh.j2
roles/ollama/vars/: main.yml
roles/open_webui/tasks/: main.yml  uninstall.yml
roles/open_webui/templates/: .env.j2  docker-compose.yml.j2
roles/open_webui/vars/: main.yml
scripts/: test-ollama-connection.sh
(+8 files in other folders)
